--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -27,7 +27,7 @@ rel="stylesheet">
   </nav>
   <div class="aboutush1">
     <h1>About Us</h1>
-  </div> 
+  </div>
   <div class="aboutush3">
     <h3>
       La Feliz is a premium self-shoot portrait experience with a pro-
@@ -43,15 +43,16 @@ content, or just celebrating yourself, we provide the space.
     </div>
     <div class="container">
  <div class="aboutusimages">
-   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/e1bf9da0-6f0e-480e-b29a-84e740d5a7ea/IMG_9353.jpeg?format=750w" alt="picture of two ladies holding flowers" width="300" height="500">
+   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/e1bf9da0-6f0e-480e-b29a-84e740d5a7ea/IMG_9353.jpeg?format=750w" alt="picture of two ladies holding flowers" width="200" height="200" class="aboutusimages">
  </div>
 <div class="aboutusimagespart2">
-  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/99110c5a-4c8d-4aca-a438-e24bf3d483c7/IMG_7652.jpeg?format=750w" alt="picture of two ladies wearing animal hats" width="300" height="500">
+  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/99110c5a-4c8d-4aca-a438-e24bf3d483c7/IMG_7652.jpeg?format=750w" alt="picture of two ladies wearing animal hats" width="200" height="200" class="aboutusimagespart2">
 </div>
   <div class="aboutusimagespart3">
-   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/41b08bec-9104-4e45-96e8-e64b3e798d35/IMG_6231.jpeg?format=750w" alt="picture of two people making a heart" width="300" height="500">
+   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/41b08bec-9104-4e45-96e8-e64b3e798d35/IMG_6231.jpeg?format=750w" alt="picture of two people making a heart" width="200" height="200" class="aboutusimagespart3">
   </div>
   </div>
+   <div class="studios">
   <div class="studioh1">
   <h1>Studios</h1>
   </div>
@@ -59,6 +60,7 @@ content, or just celebrating yourself, we provide the space.
     <h3>
       Studio 1 - The Full-Body Flex
     </h3>
+     </div>
     <div class="studioflexinfo">
       <h4>Studio 1 is built for full-body shots, fashion styling, movement, and group protraits.</h4>
       <h4>Holds up to 8 guests</h4>
@@ -66,6 +68,9 @@ content, or just celebrating yourself, we provide the space.
     <div class="flexbutton">
       <button type="button"><a href="https://www.lafeliz.ca/book-now-1-1">Book a session now!</a></button>
     </div>
+     <div class="imgflex">
+        <img src=https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/48a2fbc5-6941-465d-8db2-6eece91d9d35/Full+body+self+portrait+photo?format=2500w width="200" height="200">
+     </div>
   <div class="studioh3glow">
        <h3>Studio 2 - The Close-Up Glow</h3>  
   </div>
@@ -74,8 +79,11 @@ content, or just celebrating yourself, we provide the space.
       <h4>Holds up to 6 guests</h4>
     </div>
     <div class="glowbutton">
-      <button type="button"><a href="https://www.lafeliz.ca/book-now-2-1">Book a session now!</a></button>
+      <button type="button"><a href="https://www.lafeliz.ca/book-now-2-1">Book a session now!</a></button> 
     </div>
+     <div class="imgglow">
+     <img src= https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/ddf70941-3237-4bc8-a961-5674c386917d/IMG_6476.jpeg?format=2500w width="200" height="200">
+     </div>
   <div class="studioh3red">
        <h3>Studio 3 - The Red Box</h3>
        </div>
@@ -86,23 +94,24 @@ content, or just celebrating yourself, we provide the space.
 <div class="redbutton">
       <button type="button"><a href="https://www.lafeliz.ca/book-now-3-1">Book a session now!</a></button>
     </div>
-   <div class="location">
+     <div class="imgred">
+     <img src= https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/6ab33029-0fd4-41c4-8078-520fe8fbedbd/IMG_6026.jpeg?format=2500w width="200" height="200">
+     </div>
+  </div>
+   <div class="footer">
+     <footer>
      <h6>Location</h6>
      <a href="maps.app.goo.gl/GWvBwgbJjB4KgUhu5?g_st=com.google.maps.preview.copy"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
-    </div>
-    <div class="hours">
       <h6>Hours</h6>
       <h6>Monday (CLOSED)</h6>
       <h6>Tuesday (CLOSED)</h6>
       <h6>Wednesday - Sunday</h6>
       <h6>12PM - 6PM</h6>
-    </div>
-       <footer>
-       <div class="contact">
          <h6>Contact</h6>
          <h6><u>lafelizinquiries@gmail.com</u></h6>
          <h6><u>+1(289)763-2630</u></h6>
-    </div>
        </footer>
+       </div>
 </body>
 </html>
+
