--- a/finalprojectpage2.html
+++ b/finalprojectpage2.html
@@ -10,17 +10,15 @@ rel="stylesheet">
 <title>La Feliz | Self Protrait Studio</title>
 </head>
 <body>
-<div class="logo">
   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="100">
-  </div>
 <nav class= "navbar navbar-expand-sm bg-light">
   <div class="navigation">
   <ul class="navbar-nav">
     <li class="nav item">
-      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage2.html">Photobooth</a>
+      <a class="nav-link" href="#">Photobooth</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage3.html">FAQ</a>
+      <a class="nav-link" href="#">FAQ</a>
     </li>
     </ul>
   </div>
@@ -44,7 +42,7 @@ rel="stylesheet">
     </h3>
   </div>
    <div class="essentialimage">
-       <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/90b6101e-1518-4bdd-8233-83516be4a462/IMG_8796.jpeg?format=750w">
+       <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/90b6101e-1518-4bdd-8233-83516be4a462/IMG_8796.jpeg?format=750w" width="300" height="400">
       <button type="button">Book Package</button>
   </div>
     <div class="premium">
@@ -63,7 +61,7 @@ rel="stylesheet">
     </h3>
   </div>
   <div class="premiumimage">
-       <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/efb15362-18f5-4192-9dd4-7f0f64fcb784/IMG_7495.jpeg?format=750w">
+       <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/efb15362-18f5-4192-9dd4-7f0f64fcb784/IMG_7495.jpeg?format=750w" width="300" height="400">
      <button type="button">Book Package</button>
   </div>
     <div class="luxe">
@@ -71,7 +69,8 @@ rel="stylesheet">
     <h3>
       <i>
         <ul>
-          <li>Unlimite prints and digital captures sent instantly</li>
+          <li>Unlimited
+            prints and digital captures sent instantly</li>
           <li>2 custom event frame (different layout) & screen included</li>
           <li>Choice of a premium backdrops (glitter gold or sliver)</li>
           <li>Props set included</li>
@@ -82,7 +81,7 @@ rel="stylesheet">
     </h3>
   </div>
     <div class="luxeimage">
-       <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/adeb3d52-6d17-4ef3-9ec0-393616b41353/IMG_1845.jpeg?format=750w">
+       <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/adeb3d52-6d17-4ef3-9ec0-393616b41353/IMG_1845.jpeg?format=750w" width="300" height="400">
        <button type="button">Book Package</button>
   </div>
  <div class="addonsimportantnotes">
@@ -121,24 +120,19 @@ rel="stylesheet">
    </h5>
       </div>
    </div>
-   <div class="location">
+    <div class="footer">
+     <footer>
      <h6>Location</h6>
      <a href="maps.app.goo.gl/GWvBwgbJjB4KgUhu5?g_st=com.google.maps.preview.copy"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
-    </div>
-    <footer>
-       <div class="hours">
       <h6>Hours</h6>
       <h6>Monday (CLOSED)</h6>
       <h6>Tuesday (CLOSED)</h6>
       <h6>Wednesday - Sunday</h6>
       <h6>12PM - 6PM</h6>
-    </div>
-      <footer>
-       <div class="contact">
          <h6>Contact</h6>
          <h6><u>lafelizinquiries@gmail.com</u></h6>
          <h6><u>+1(289)763-2630</u></h6>
-    </div>
-      </footer>
+       </footer>
+       </div>
 </body>
 </html>
