--- a/finalprojectpage3.html
+++ b/finalprojectpage3.html
@@ -71,24 +71,19 @@ If any spills or damage occur, a cleaning fee may apply, so please handle food p
     <div class="secondh1">
       <h1>Have more questions? Contact Us!</h1>
          </div>
-  </nav>
-   <div class="location">
+  <div class="footer">
+     <footer>
      <h6>Location</h6>
      <a href="maps.app.goo.gl/GWvBwgbJjB4KgUhu5?g_st=com.google.maps.preview.copy"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
-    </div>
-    <div class="hours">
       <h6>Hours</h6>
       <h6>Monday (CLOSED)</h6>
       <h6>Tuesday (CLOSED)</h6>
       <h6>Wednesday - Sunday</h6>
       <h6>12PM - 6PM</h6>
-    </div>
-       <footer>
-         <div class="contact">
          <h6>Contact</h6>
          <h6><u>lafelizinquiries@gmail.com</u></h6>
          <h6><u>+1(289)763-2630</u></h6>
-    </div>
        </footer>
+       </div>
 </body>
 </html>
