--- a/finalprojectpage2.html
+++ b/finalprojectpage2.html
@@ -43,7 +43,7 @@ rel="stylesheet">
   </div>
    <div class="essentialimage">
        <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/90b6101e-1518-4bdd-8233-83516be4a462/IMG_8796.jpeg?format=750w" width="300" height="400">
-      <button type="button">Book Package</button>
+      <button type="button" <a href="https://docs.google.com/forms/d/e/1FAIpQLSe9vQD1qTtM9W3cbyOAbyksI6SlAJgy-YlKqVUhv4q4flw59g/viewform">Book Package</a></button>
   </div>
     <div class="premium">
     <h3>✨Premium - $449 (3 hours)</h3>
@@ -62,7 +62,7 @@ rel="stylesheet">
   </div>
   <div class="premiumimage">
        <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/efb15362-18f5-4192-9dd4-7f0f64fcb784/IMG_7495.jpeg?format=750w" width="300" height="400">
-     <button type="button">Book Package</button>
+     <button type="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe9vQD1qTtM9W3cbyOAbyksI6SlAJgy-YlKqVUhv4q4flw59g/viewform">Book Package</a></button>
   </div>
     <div class="luxe">
     <h3>✨Luxe - $599 (4 hours)</h3>
@@ -82,7 +82,7 @@ rel="stylesheet">
   </div>
     <div class="luxeimage">
        <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/adeb3d52-6d17-4ef3-9ec0-393616b41353/IMG_1845.jpeg?format=750w" width="300" height="400">
-       <button type="button">Book Package</button>
+       <button type="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe9vQD1qTtM9W3cbyOAbyksI6SlAJgy-YlKqVUhv4q4flw59g/viewform">Book Package</a></button>
   </div>
  <div class="addonsimportantnotes">
    <h3>Add-ons / Extras:</h3>
