--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -10,7 +10,9 @@ rel="stylesheet">
 <title>La Feliz | Self Protrait Studio</title>
 </head>
 <body>
+<div class="logo">
   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="100">
+  </div>
 <nav class= "navbar navbar-expand-sm bg-light">
   <div class="navigation">
   <ul class="navbar-nav">
@@ -67,7 +69,7 @@ content, or just celebrating yourself, we provide the space.
       <button type="button"><a href="https://www.lafeliz.ca/book-now-1-1">Book a session now!</a></button>
     </div>
      <div class="imgflex">
-        <img src=https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/48a2fbc5-6941-465d-8db2-6eece91d9d35/Full+body+self+portrait+photo?format=2500w width="200" height="200">
+        <img src=https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/48a2fbc5-6941-465d-8db2-6eece91d9d35/Full+body+self+portrait+photo?format2500w width="300" height="300">
      </div>
   <div class="studioh3glow">
        <h3>Studio 2 - The Close-Up Glow</h3>  
@@ -80,7 +82,7 @@ content, or just celebrating yourself, we provide the space.
       <button type="button"><a href="https://www.lafeliz.ca/book-now-2-1">Book a session now!</a></button> 
     </div>
      <div class="imgglow">
-     <img src= https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/ddf70941-3237-4bc8-a961-5674c386917d/IMG_6476.jpeg?format=2500w width="200" height="200">
+     <img src= https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/ddf70941-3237-4bc8-a961-5674c386917d/IMG_6476.jpeg?format=2500w width="300" height="300">
      </div>
   <div class="studioh3red">
        <h3>Studio 3 - The Red Box</h3>
@@ -93,7 +95,7 @@ content, or just celebrating yourself, we provide the space.
       <button type="button"><a href="https://www.lafeliz.ca/book-now-3-1">Book a session now!</a></button>
     </div>
      <div class="imgred">
-     <img src= https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/6ab33029-0fd4-41c4-8078-520fe8fbedbd/IMG_6026.jpeg?format=2500w width="200" height="200">
+     <img src= https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/6ab33029-0fd4-41c4-8078-520fe8fbedbd/IMG_6026.jpeg?format=2500w width="300" height="300">
      </div>
   </div>
    <div class="footer">
@@ -112,4 +114,3 @@ content, or just celebrating yourself, we provide the space.
        </div>
 </body>
 </html>
-
