--- a/finalprojectpage3.html
+++ b/finalprojectpage3.html
@@ -10,9 +10,7 @@ rel="stylesheet">
 <title>La Feliz | Self Protrait Studio</title>
 </head>
 <body>
-<div class="logo">
   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="100">
-  </div>
 <nav class= "navbar navbar-expand-sm bg-light">
   <div class="navigation">
   <ul class="navbar-nav">
@@ -30,7 +28,7 @@ rel="stylesheet">
   </div>
   <div class="faqh3andh4part1">
     <h3><strong>✅What is a self-protrait session?</strong></h3>
-    <h4><i>A self-shoot session means you’re the photographer and the model! You’ll use our high-quality camera and wireless remote to take your own photos in a private studio. It’s fun, empowering, and totally in your control.<i></h4>
+    <h4><i>A self-shoot session means you’re the photographer and the model! You’ll use our high-quality camera and wireless remote to take your own photos in a private studio. It’s fun, empowering, and totally in your control.</i></h4>
       <h3><strong>✅Will someone help me?</strong></h3>
       <h4><i>Yes! A staff member will greet you, help with setup, and walk you through how everything works before your session starts. During the shoot, you’ll have full privacy and creative freedom.</i></h4>
       <h3><strong>✅How long is each session?</strong></h3>
