--- a/finalprojectpage2.html
+++ b/finalprojectpage2.html
@@ -15,10 +15,10 @@ rel="stylesheet">
   <div class="navigation">
   <ul class="navbar-nav">
     <li class="nav item">
-      <a class="nav-link" href="#">Photobooth</a>
+      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage2.html#">Photobooth</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">FAQ</a>
+      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage3.html">FAQ</a>
     </li>
     </ul>
   </div>
