--- a/finalprojectpage2.html
+++ b/finalprojectpage2.html
@@ -43,7 +43,7 @@ rel="stylesheet">
   </div>
    <div class="essentialimage">
        <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/90b6101e-1518-4bdd-8233-83516be4a462/IMG_8796.jpeg?format=750w" width="300" height="400">
-      <button type="button" <a href="https://docs.google.com/forms/d/e/1FAIpQLSe9vQD1qTtM9W3cbyOAbyksI6SlAJgy-YlKqVUhv4q4flw59g/viewform">Book Package</a></button>
+      <button type="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe9vQD1qTtM9W3cbyOAbyksI6SlAJgy-YlKqVUhv4q4flw59g/viewform">Book Package</a></button>
   </div>
     <div class="premium">
     <h3>✨Premium - $449 (3 hours)</h3>
