--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -56,7 +56,7 @@ content, or just celebrating yourself, we provide the space.
   </div>
   <div class="studioh3flex">
     <h3>
-      Studio 1 - The Full-Body Flex
+      <strong>Studio 1 - The Full-Body Flex</strong>
     </h3>
      </div>
     <div class="studioflexinfo">
@@ -70,7 +70,7 @@ content, or just celebrating yourself, we provide the space.
         <img src=https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/48a2fbc5-6941-465d-8db2-6eece91d9d35/Full+body+self+portrait+photo?format2500w width="300" height="300">
      </div>
   <div class="studioh3glow">
-       <h3>Studio 2 - The Close-Up Glow</h3>  
+       <h3><strong>Studio 2 - The Close-Up Glow</strong></h3>  
   </div>
     <div class="studioglowinfo">
       <h4>Studio 2 is designed for sharp headshots, beauty portraits, and intimate close-ups.</h4>
@@ -83,7 +83,7 @@ content, or just celebrating yourself, we provide the space.
      <img src= https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/ddf70941-3237-4bc8-a961-5674c386917d/IMG_6476.jpeg?format=2500w width="300" height="300">
      </div>
   <div class="studioh3red">
-       <h3>Studio 3 - The Red Box</h3>
+       <h3><strong>Studio 3 - The Red Box</strong></h3>
        </div>
     <div class="studioredinfo">
       <h4>Studio 3 is an all red setup with a high angle camera. Ideal for creative shots.</h4>
