--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -23,10 +23,10 @@ rel="stylesheet">
     </ul>
   </div>
   </nav>
-  <div class="aboutush1">
+  <div class="aboutush1"> <!-- This is the "About Us" header -->
     <h1>About Us</h1>
   </div>
-  <div class="aboutush3">
+  <div class="aboutush3"> <!-- This is the written text under the "About Us" header -->
     <h3>
       La Feliz is a premium self-shoot portrait experience with a pro-
 grade lighting, curated props, an complete creative control.
@@ -36,10 +36,10 @@ content, or just celebrating yourself, we provide the space.
 
 
     </h3>
-    <div class="aboutush3part2">
+    <div class="aboutush3part2"> <!-- This is the written text under the "About Us" header -->
       <h3>You make the magic!</h3>
     </div>
-    <div class="container">
+    <div class="container"> <!-- Inside this div tag contains all the images under the written text for the "About Us" header -->
  <div class="aboutusimages">
    <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/e1bf9da0-6f0e-480e-b29a-84e740d5a7ea/IMG_9353.jpeg?format=750w" alt="picture of two ladies holding flowers" width="200" height="200" class="aboutusimages">
  </div>
@@ -50,56 +50,56 @@ content, or just celebrating yourself, we provide the space.
    <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/41b08bec-9104-4e45-96e8-e64b3e798d35/IMG_6231.jpeg?format=750w" alt="picture of two people making a heart" width="200" height="200" class="aboutusimagespart3">
   </div>
   </div>
-   <div class="studios">
-  <div class="studioh1">
+   <div class="studios"> <!-- This div tag is a container for all of the studio options -->
+  <div class="studioh1"> <!-- This is the "Studios" header -->
   <h1>Studios</h1>
   </div>
-  <div class="studioh3flex">
+  <div class="studioh3flex"> <!-- This is "The Full-Body Flex" header -->
     <h3>
       <strong>Studio 1 - The Full-Body Flex</strong>
     </h3>
      </div>
-    <div class="studioflexinfo">
+    <div class="studioflexinfo"> <!-- This is the text written under "The Full-Body Flex" header -->
       <h4>Studio 1 is built for full-body shots, fashion styling, movement, and group protraits.</h4>
       <h4>Holds up to 8 guests</h4>
   </div>
-    <div class="flexbutton">
+    <div class="flexbutton"> <!--This button takes you to their booking website -->
       <button type="button"><a href="https://www.lafeliz.ca/book-now-1-1">Book a session now!</a></button>
     </div>
-     <div class="imgflex">
+     <div class="imgflex"> <!-- This is the image that shows a girl holding flowers beside the header, written text, and button. -->
         <img src=https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/48a2fbc5-6941-465d-8db2-6eece91d9d35/Full+body+self+portrait+photo?format2500w width="300" height="300">
      </div>
-  <div class="studioh3glow">
+  <div class="studioh3glow"> <!-- This is "The Close-Up Glow" header-->
        <h3><strong>Studio 2 - The Close-Up Glow</strong></h3>  
   </div>
-    <div class="studioglowinfo">
+    <div class="studioglowinfo"> <!-- This is the text written under "The Close-Up Glow" header-->
       <h4>Studio 2 is designed for sharp headshots, beauty portraits, and intimate close-ups.</h4>
       <h4>Holds up to 6 guests</h4>
     </div>
-    <div class="glowbutton">
+    <div class="glowbutton"> <!-- This button takes you to their booking website-->
       <button type="button"><a href="https://www.lafeliz.ca/book-now-2-1">Book a session now!</a></button> 
     </div>
-     <div class="imgglow">
+     <div class="imgglow"> <!--This is an image showing two guys sitting and smiling -->
      <img src= https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/ddf70941-3237-4bc8-a961-5674c386917d/IMG_6476.jpeg?format=2500w width="300" height="300">
      </div>
-  <div class="studioh3red">
+  <div class="studioh3red"> <!-- This is "The Red Box" header -->
        <h3><strong>Studio 3 - The Red Box</strong></h3>
        </div>
-    <div class="studioredinfo">
+    <div class="studioredinfo"> <!-- This is the tect written under "The Red Box" header -->
       <h4>Studio 3 is an all red setup with a high angle camera. Ideal for creative shots.</h4>
       <h4>Holds up to 5 guests</h4>
     </div>
-<div class="redbutton">
+<div class="redbutton"> <!-- This button takes you t otheir booking website -->
       <button type="button"><a href="https://www.lafeliz.ca/book-now-3-1">Book a session now!</a></button>
     </div>
-     <div class="imgred">
+     <div class="imgred"> <!-- This is in image showing a girl inside a red room -->
      <img src= https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/6ab33029-0fd4-41c4-8078-520fe8fbedbd/IMG_6026.jpeg?format=2500w width="300" height="300">
      </div>
   </div>
-   <div class="footer">
+   <div class="footer"> <!-- Inside this div class contains the location and contact info for the small business -->
      <footer>
      <h6>Location</h6>
-     <a href="maps.app.goo.gl/GWvBwgbJjB4KgUhu5?g_st=com.google.maps.preview.copy"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
+     <a href="google.com/maps?q=476+Timothy+St,+Newmarket,+ON+L3Y+1P8&ftid=0x882ad2103a7470b7:0x2cb2aba4f8960c20&entry=gps&lucs=,94224825,94227247,94227248,94231188,47071704,47069508,94218641,94203019,47084304,94208458,94208447&g_ep=CAISEjI1LjE0LjEuNzQyMzk4MTI0MBgAIKzfASpjLDk0MjI0ODI1LDk0MjI3MjQ3LDk0MjI3MjQ4LDk0MjMxMTg4LDQ3MDcxNzA0LDQ3MDY5NTA4LDk0MjE4NjQxLDk0MjAzMDE5LDQ3MDg0MzA0LDk0MjA4NDU4LDk0MjA4NDQ3QgJDQQ%3D%3D&skid=3bfc0374-7a73-4bb6-aacd-f1f8694d4429&g_st=com.google.maps.preview.copy"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
       <h6>Hours</h6>
       <h6>Monday (CLOSED)</h6>
       <h6>Tuesday (CLOSED)</h6>
