--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -10,15 +10,15 @@ rel="stylesheet">
 <title>La Feliz | Self Protrait Studio</title>
 </head>
 <body>
-  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="100">
+  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="100"> <!-- Image of logo -->
 <nav class= "navbar navbar-expand-sm bg-light">
-  <div class="navigation">
+  <div class="navigation"> <!-- This is my navigation bar -->
   <ul class="navbar-nav">
     <li class="nav item">
-      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage2.html">Photobooth</a>
+      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage2.html">Photobooth</a> <!-- Creates a navigation to the second page-->
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage3.html">FAQ</a>
+      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage3.html">FAQ</a> <!-- Creates a navigation to the third page-->
     </li>
     </ul>
   </div>
