--- a/finalprojectpage2.html
+++ b/finalprojectpage2.html
@@ -10,23 +10,23 @@ rel="stylesheet">
 <title>La Feliz | Self Protrait Studio</title>
 </head>
 <body>
-  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="100">
+  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="100"> <!-- Image of logo -->
 <nav class= "navbar navbar-expand-sm bg-light">
-  <div class="navigation">
+  <div class="navigation"> <!-- This is my navigation bar -->
   <ul class="navbar-nav">
     <li class="nav item">
-      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage2.html#">Photobooth</a>
+      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage2.html#">Photobooth</a> <!-- Creates a navigation to the second page-->
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage3.html">FAQ</a>
+      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage3.html">FAQ</a> <!-- Creates a navigation to the third page-->
     </li>
     </ul>
   </div>
   </nav>
-  <div class="photopackagesh1">
+  <div class="photopackagesh1"> <!-- This is the header "Photobooth Packages" -->
     <h1>Photobooth Packages</h1>
   </div>
-  <div class="essential">
+  <div class="essential"> <!-- This div tag contains the header and written text -->
     <h3>✨Essential - $299 (2 hours)</h3>
     <h3>
       <i>
@@ -41,11 +41,11 @@ rel="stylesheet">
       </i>
     </h3>
   </div>
-   <div class="essentialimage">
+   <div class="essentialimage"> <!-- This div tag contains the image beside the header and written -->
        <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/90b6101e-1518-4bdd-8233-83516be4a462/IMG_8796.jpeg?format=750w" width="300" height="400">
-      <button type="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe9vQD1qTtM9W3cbyOAbyksI6SlAJgy-YlKqVUhv4q4flw59g/viewform">Book Package</a></button>
+      <button type="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe9vQD1qTtM9W3cbyOAbyksI6SlAJgy-YlKqVUhv4q4flw59g/viewform">Book Package</a></button> <!-- This button takes you to the booking webpage -->
   </div>
-    <div class="premium">
+    <div class="premium"> <!-- This div tag contains the header and written text -->
     <h3>✨Premium - $449 (3 hours)</h3>
     <h3>
       <i>
@@ -60,11 +60,11 @@ rel="stylesheet">
       </i>
     </h3>
   </div>
-  <div class="premiumimage">
+  <div class="premiumimage"> <!-- This div tag contains the image beside the header and written -->
        <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/efb15362-18f5-4192-9dd4-7f0f64fcb784/IMG_7495.jpeg?format=750w" width="300" height="400">
-     <button type="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe9vQD1qTtM9W3cbyOAbyksI6SlAJgy-YlKqVUhv4q4flw59g/viewform">Book Package</a></button>
+     <button type="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe9vQD1qTtM9W3cbyOAbyksI6SlAJgy-YlKqVUhv4q4flw59g/viewform">Book Package</a></button> <!-- This button takes you to the booking webpage -->
   </div>
-    <div class="luxe">
+    <div class="luxe"> <!-- This div tag contains the header and written text -->
     <h3>✨Luxe - $599 (4 hours)</h3>
     <h3>
       <i>
@@ -80,11 +80,11 @@ rel="stylesheet">
       </i>
     </h3>
   </div>
-    <div class="luxeimage">
+    <div class="luxeimage"> <!-- This div tag contains the image beside the header and written -->
        <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/adeb3d52-6d17-4ef3-9ec0-393616b41353/IMG_1845.jpeg?format=750w" width="300" height="400">
-       <button type="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe9vQD1qTtM9W3cbyOAbyksI6SlAJgy-YlKqVUhv4q4flw59g/viewform">Book Package</a></button>
+       <button type="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe9vQD1qTtM9W3cbyOAbyksI6SlAJgy-YlKqVUhv4q4flw59g/viewform">Book Package</a></button> <!-- This button takes you to the booking webpage -->
   </div>
- <div class="addonsimportantnotes">
+ <div class="addonsimportantnotes"> <!-- This div tag contains the header that says "Add-ons and Extras" along with written text -->
    <h3>Add-ons / Extras:</h3>
    <h5>
      <ul>
@@ -120,10 +120,10 @@ rel="stylesheet">
    </h5>
       </div>
    </div>
-    <div class="footer">
+    <div class="footer"> <!-- Inside this div class contains the location, hours, and contact info for the small business -->
      <footer>
-     <h6>Location</h6>
-     <a href="maps.app.goo.gl/GWvBwgbJjB4KgUhu5?g_st=com.google.maps.preview.copy"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
+     <h6>Location</h6> <!-- The href tag will have a hyper link leading to the location of the business on Google Maps -->
+     <a href="google.com/maps?q=476+Timothy+St,+Newmarket,+ON+L3Y+1P8&ftid=0x882ad2103a7470b7:0x2cb2aba4f8960c20&entry=gps&lucs=,94224825,94227247,94227248,94231188,47071704,47069508,94218641,94203019,47084304,94208458,94208447&g_ep=CAISEjI1LjE0LjEuNzQyMzk4MTI0MBgAIKzfASpjLDk0MjI0ODI1LDk0MjI3MjQ3LDk0MjI3MjQ4LDk0MjMxMTg4LDQ3MDcxNzA0LDQ3MDY5NTA4LDk0MjE4NjQxLDk0MjAzMDE5LDQ3MDg0MzA0LDk0MjA4NDU4LDk0MjA4NDQ3QgJDQQ%3D%3D&skid=3bfc0374-7a73-4bb6-aacd-f1f8694d4429&g_st=com.google.maps.preview.copy"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
       <h6>Hours</h6>
       <h6>Monday (CLOSED)</h6>
       <h6>Tuesday (CLOSED)</h6>
