--- a/finalprojectpage3.html
+++ b/finalprojectpage3.html
@@ -10,23 +10,23 @@ rel="stylesheet">
 <title>La Feliz | Self Protrait Studio</title>
 </head>
 <body>
-  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="100">
+  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="100"> <!-- Image of logo -->
 <nav class= "navbar navbar-expand-sm bg-light">
-  <div class="navigation">
+  <div class="navigation"> <!-- This is my navigation bar -->
   <ul class="navbar-nav">
     <li class="nav item">
-      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage2.html">Photobooth</a>
+      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage2.html">Photobooth</a> <!-- Creates a navigation to the second page-->
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage3.html">FAQ</a>
+      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage3.html">FAQ</a> <!-- Creates a navigation to the third page-->
     </li>
     </ul>
     </nav>
   </div>
-  <div class="faqh1">
+  <div class="faqh1"> <!-- This is the header that says "Frequently Asked Questions"-->
     <h1>Frequently Asked Questions</h1>
   </div>
-  <div class="faqh3andh4part1">
+  <div class="faqh3andh4part1"> <!-- This div tag contains h3 tags for the questions and h4 tags for the answer -->
     <h3><strong>✅What is a self-protrait session?</strong></h3>
     <h4><i>A self-shoot session means you’re the photographer and the model! You’ll use our high-quality camera and wireless remote to take your own photos in a private studio. It’s fun, empowering, and totally in your control.</i></h4>
       <h3><strong>✅Will someone help me?</strong></h3>
@@ -46,7 +46,7 @@ rel="stylesheet">
           </i>
         </h4>
            </div>
-      <div class="faqh3andh4part2">
+      <div class="faqh3andh4part2"> <!-- This div tag contains h3 tags for the questions and h4 tags for the answer -->
          <h3><strong>✅Can I bring someone with me?</strong></h3>
     <h4><i>Yes! Our base price admits 2 guests(including YOU). Additional guests are $15/person. Children under the age of 5 are FREE. You may not count them as guests when booking.</i></h4>
            <h3><strong>✅Are pets allowed in your studio?</strong></h3>
@@ -66,13 +66,13 @@ If any spills or damage occur, a cleaning fee may apply, so please handle food p
     <h4><i>Absolutely! You own all the photos you take during your session. All digital photos will be sent to you via email within the day. We won’t use or share any images without your permission.
 </i></h4>
       </div>
-    <div class="secondh1">
+    <div class="secondh1"> <!-- This header says "Have more questions? Contact Us! -->
       <h1>Have more questions? Contact Us!</h1>
          </div>
-  <div class="footer">
+  <div class="footer"> <!-- Inside this div class contains the location, hours, and contact info for the small business -->
      <footer>
-     <h6>Location</h6>
-     <a href="maps.app.goo.gl/GWvBwgbJjB4KgUhu5?g_st=com.google.maps.preview.copy"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
+     <h6>Location</h6> <!-- The href tag will have a hyper link leading to the location of the business on Google Maps -->
+     <a href="google.com/maps?q=476+Timothy+St,+Newmarket,+ON+L3Y+1P8&ftid=0x882ad2103a7470b7:0x2cb2aba4f8960c20&entry=gps&lucs=,94224825,94227247,94227248,94231188,47071704,47069508,94218641,94203019,47084304,94208458,94208447&g_ep=CAISEjI1LjE0LjEuNzQyMzk4MTI0MBgAIKzfASpjLDk0MjI0ODI1LDk0MjI3MjQ3LDk0MjI3MjQ4LDk0MjMxMTg4LDQ3MDcxNzA0LDQ3MDY5NTA4LDk0MjE4NjQxLDk0MjAzMDE5LDQ3MDg0MzA0LDk0MjA4NDU4LDk0MjA4NDQ3QgJDQQ%3D%3D&skid=3bfc0374-7a73-4bb6-aacd-f1f8694d4429&g_st=com.google.maps.preview.copy"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
       <h6>Hours</h6>
       <h6>Monday (CLOSED)</h6>
       <h6>Tuesday (CLOSED)</h6>
