--- a/finalprojectpage3.html
+++ b/finalprojectpage3.html
@@ -72,7 +72,7 @@ If any spills or damage occur, a cleaning fee may apply, so please handle food p
   <div class="footer"> <!-- Inside this div class contains the location, hours, and contact info for the small business -->
      <footer>
      <h6>Location</h6> <!-- The href tag will have a hyper link leading to the location of the business on Google Maps -->
-     <a href="google.com/maps?q=476+Timothy+St,+Newmarket,+ON+L3Y+1P8&ftid=0x882ad2103a7470b7:0x2cb2aba4f8960c20&entry=gps&lucs=,94224825,94227247,94227248,94231188,47071704,47069508,94218641,94203019,47084304,94208458,94208447&g_ep=CAISEjI1LjE0LjEuNzQyMzk4MTI0MBgAIKzfASpjLDk0MjI0ODI1LDk0MjI3MjQ3LDk0MjI3MjQ4LDk0MjMxMTg4LDQ3MDcxNzA0LDQ3MDY5NTA4LDk0MjE4NjQxLDk0MjAzMDE5LDQ3MDg0MzA0LDk0MjA4NDU4LDk0MjA4NDQ3QgJDQQ%3D%3D&skid=3bfc0374-7a73-4bb6-aacd-f1f8694d4429&g_st=com.google.maps.preview.copy"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
+     <a href="https://maps.app.goo.gl/r8sS25buRgApZ1K6A"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
       <h6>Hours</h6>
       <h6>Monday (CLOSED)</h6>
       <h6>Tuesday (CLOSED)</h6>
