--- a/finalprojectpage2.html
+++ b/finalprojectpage2.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="finalprojectpage2.css" rel="stylesheet" type"text/css"/>
+<link href="finalprojectpage2.css" rel="stylesheet" type"text/css"/> <!-- Connects CSS to HTML-->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<title>La Feliz | Self Protrait Studio</title>
+rel="stylesheet"> <!-- Connects Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> <!-- Connects Bootstrap -->
+<title>La Feliz | Self Portrait Studio</title> <!-- Adds a title to the tab -->
 </head>
 <body>
   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="100"> <!-- Image of logo -->
@@ -69,8 +69,7 @@ rel="stylesheet">
     <h3>
       <i>
         <ul>
-          <li>Unlimited
-            prints and digital captures sent instantly</li>
+          <li>Unlimited prints and digital captures sent instantly</li>
           <li>2 custom event frame (different layout) & screen included</li>
           <li>Choice of a premium backdrops (glitter gold or sliver)</li>
           <li>Props set included</li>
@@ -123,7 +122,7 @@ rel="stylesheet">
     <div class="footer"> <!-- Inside this div class contains the location, hours, and contact info for the small business -->
      <footer>
      <h6>Location</h6> <!-- The href tag will have a hyper link leading to the location of the business on Google Maps -->
-     <a href="google.com/maps?q=476+Timothy+St,+Newmarket,+ON+L3Y+1P8&ftid=0x882ad2103a7470b7:0x2cb2aba4f8960c20&entry=gps&lucs=,94224825,94227247,94227248,94231188,47071704,47069508,94218641,94203019,47084304,94208458,94208447&g_ep=CAISEjI1LjE0LjEuNzQyMzk4MTI0MBgAIKzfASpjLDk0MjI0ODI1LDk0MjI3MjQ3LDk0MjI3MjQ4LDk0MjMxMTg4LDQ3MDcxNzA0LDQ3MDY5NTA4LDk0MjE4NjQxLDk0MjAzMDE5LDQ3MDg0MzA0LDk0MjA4NDU4LDk0MjA4NDQ3QgJDQQ%3D%3D&skid=3bfc0374-7a73-4bb6-aacd-f1f8694d4429&g_st=com.google.maps.preview.copy"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
+     <a href="https://maps.app.goo.gl/r8sS25buRgApZ1K6A"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
       <h6>Hours</h6>
       <h6>Monday (CLOSED)</h6>
       <h6>Tuesday (CLOSED)</h6>
