--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -14,7 +14,7 @@ rel="stylesheet"> <!-- Connects Bootstrap-->
 <nav class= "navbar navbar-expand-sm bg-light">
   <div class="navigation"> <!-- This is my navigation bar -->
   <ul class="navbar-nav">
-    <li class="nav item">
+    <li class="nav-item">
       <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage2.html">Photobooth</a> <!-- Creates a navigation to the second page-->
     </li>
     <li class="nav-item">
@@ -41,13 +41,13 @@ content, or just celebrating yourself, we provide the space.
     </div>
     <div class="container"> <!-- Inside this div tag contains all the images under the written text for the "About Us" header -->
  <div class="aboutusimages">
-   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/e1bf9da0-6f0e-480e-b29a-84e740d5a7ea/IMG_9353.jpeg?format=750w" alt="picture of two ladies holding flowers" width="200" height="200" class="aboutusimages">
+   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/e1bf9da0-6f0e-480e-b29a-84e740d5a7ea/IMG_9353.jpeg?format=750w" width="200" height="200" class="aboutusimages">
  </div>
 <div class="aboutusimagespart2">
-  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/99110c5a-4c8d-4aca-a438-e24bf3d483c7/IMG_7652.jpeg?format=750w" alt="picture of two ladies wearing animal hats" width="200" height="200" class="aboutusimagespart2">
+  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/99110c5a-4c8d-4aca-a438-e24bf3d483c7/IMG_7652.jpeg?format=750w" width="200" height="200" class="aboutusimagespart2">
 </div>
   <div class="aboutusimagespart3">
-   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/41b08bec-9104-4e45-96e8-e64b3e798d35/IMG_6231.jpeg?format=750w" alt="picture of two people making a heart" width="200" height="200" class="aboutusimagespart3">
+   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/41b08bec-9104-4e45-96e8-e64b3e798d35/IMG_6231.jpeg?format=750w" width="200" height="200" class="aboutusimagespart3">
   </div>
   </div>
    <div class="studios"> <!-- This div tag is a container for all of the studio options -->
@@ -67,7 +67,7 @@ content, or just celebrating yourself, we provide the space.
       <button type="button"><a href="https://www.lafeliz.ca/book-now-1-1">Book a session now!</a></button>
     </div>
      <div class="imgflex"> <!-- This is the image that shows a girl holding flowers beside the header, written text, and button. -->
-        <img src=https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/48a2fbc5-6941-465d-8db2-6eece91d9d35/Full+body+self+portrait+photo?format2500w width="300" height="300">
+        <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/48a2fbc5-6941-465d-8db2-6eece91d9d35/Full+body+self+portrait+photo?format2500w" width="300" height="300">
      </div>
   <div class="studioh3glow"> <!-- This is "The Close-Up Glow" header-->
        <h3><strong>Studio 2 - The Close-Up Glow</strong></h3>  
@@ -80,7 +80,7 @@ content, or just celebrating yourself, we provide the space.
       <button type="button"><a href="https://www.lafeliz.ca/book-now-2-1">Book a session now!</a></button> 
     </div>
      <div class="imgglow"> <!--This is an image showing two guys sitting and smiling -->
-     <img src= https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/ddf70941-3237-4bc8-a961-5674c386917d/IMG_6476.jpeg?format=2500w width="300" height="300">
+     <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/ddf70941-3237-4bc8-a961-5674c386917d/IMG_6476.jpeg?format=2500w" width="300" height="300">
      </div>
   <div class="studioh3red"> <!-- This is "The Red Box" header -->
        <h3><strong>Studio 3 - The Red Box</strong></h3>
@@ -93,13 +93,13 @@ content, or just celebrating yourself, we provide the space.
       <button type="button"><a href="https://www.lafeliz.ca/book-now-3-1">Book a session now!</a></button>
     </div>
      <div class="imgred"> <!-- This is in image showing a girl inside a red room -->
-     <img src= https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/6ab33029-0fd4-41c4-8078-520fe8fbedbd/IMG_6026.jpeg?format=2500w width="300" height="300">
+     <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/6ab33029-0fd4-41c4-8078-520fe8fbedbd/IMG_6026.jpeg?format=2500w" width="300" height="300">
      </div>
   </div>
    <div class="footer"> <!-- Inside this div class contains the location, hours, and contact info for the small business -->
      <footer>
      <h6>Location</h6> <!-- The href tag will have a hyper link leading to the location of the business on Google Maps -->
-     <a href="https://maps.app.goo.gl/r8sS25buRgApZ1K6A"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
+     <a href="https://maps.app.goo.gl/r8sS25buRgApZ1K6A"><h6>476 Timothy St. Newmarket, ON L3Y 1P8</h6></a>
       <h6>Hours</h6>
       <h6>Monday (CLOSED)</h6>
       <h6>Tuesday (CLOSED)</h6>
